--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,9 @@
-*.rb linguist-language=C
+
+pa1/*/* linguist-documentation
+pa2/*/* linguist-documentation
+pa3/*/* linguist-documentation
+final/*/* linguist-documentation
+pa1/src/* linguist-documentation=false
+pa2/src/* linguist-documentation=false
+pa3/src/* linguist-documentation=false
+final/code/* linguist-documentation=false
