--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
-
+pa1/*/* linguist-documentation
+pa2/*/* linguist-documentation
+pa3/*/* linguist-documentation
+final/*/* linguist-documentation
 pa1/src/* linguist-documentation=false
 pa2/src/* linguist-documentation=false
 pa3/src/* linguist-documentation=false
-final/code/* linguist-documentation=false
+final/code/src/* linguist-documentation=false
